--- a/vue/package.json
+++ b/vue/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "i": "^0.3.7",
+    "npm": "^11.0.0",
+    "pdf-viewer-vue": "^0.2.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
