--- a/.github/workflows/build-auto.yml
+++ b/.github/workflows/build-auto.yml
@@ -31,6 +31,10 @@ jobs:
 # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+# Install build tools
+      - name: Install build tools
+        run: sudo apt-get update && sudo apt-get install -y build-essential
+
 # Login against a Docker registry except on PR
 # https://github.com/docker/login-action
       - name: Log into registry ghcr.io
