--- a/.github/workflows/build-auto.yml
+++ b/.github/workflows/build-auto.yml
@@ -33,7 +33,7 @@ jobs:
 
 # Install build tools
       - name: Install build tools
-        run: sudo apt-get update && sudo apt-get install -y build-essential
+        run: sudo apt-get update && sudo apt-get install -y build-essential make
 
 # Login against a Docker registry except on PR
 # https://github.com/docker/login-action
