--- a/vue/package.json
+++ b/vue/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "i": "^0.3.7",
+    "marked": "^15.0.7",
     "npm": "^11.0.0",
     "pdf-viewer-vue": "^0.2.7",
     "vue": "^3.3.4",
